fixed spacing issues

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,8 +13,9 @@
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: center;
-	height: 100vh;
-	min-height: 600px;
+	min-height: 100vh;
+	/* min-height: 100%; */
+	/* min-height: 600px; */
 	color: #fff;
 	position: relative;
 }
@@ -62,13 +63,13 @@
 }
 
 .about-section-item {
-	display: -ms-flexbox;
+	/* display: -ms-flexbox;
 	display: -webkit-flex;
 	display: flex;
 	-ms-flex-align: center;
 	-webkit-align-items: center;
 	-webkit-box-align: center;
-	align-items: center;
+	align-items: center; */
 }
 
 .adappt-logo {
